fixed options double click added favicon added ip change added counter visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -209,9 +209,9 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 300px;
-    height: 300px;
-    margin-left: -155px;
-    margin-top: -155px;
+    width: 350px;
+    height: 400px;
+    margin-left: -175px;
+    margin-top: -200px;
     padding: 10px;
 }
